<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/choose_date"
        android:icon="@drawable/favicon_choose_date"
        android:title="@string/menu_choose_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/view_chart"
        android:title="@string/menu_chart"
        app:showAsAction="never" />
    <item
        android:id="@+id/view_abnormal"
        android:checkable="true"
        android:title="@string/menu_view_abnormal"
        app:showAsAction="never" />
    <item
        android:id="@+id/refresh_list"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />
</menu>