<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chartLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DataChartActivity">

    <TextView
        android:id="@+id/textView_default"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/text_no_record"
        android:textSize="24sp"
        android:textStyle="italic"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/legend_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/legend_sbp"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textView_default"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/legend_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="#0000FF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/textView_default"
        app:layout_constraintTop_toBottomOf="@+id/legend_1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView_default"
        app:layout_constraintStart_toStartOf="@+id/textView_default"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_prehypertension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radio_prehypertension" />

        <RadioButton
            android:id="@+id/radio_hypertension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_hypertension" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>